ブログ一覧を表示

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,37 @@
 ---
-
+import { getBlogs } from "../libs/microcms";
+const response = await getBlogs({ fields: ["id", "title"] });
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+
+    <style>
+      main {
+        margin: auto;
+        padding: 1em;
+        max-width: 60ch;
+      }
+    </style>
+
+    <title>Bean2Cup</title>
+  </head>
+  <body>
+    <h1>Bean2Cup</h1>
+    <main>
+      <ul>
+        {
+          response.contents.map((content: any) => (
+            <li>
+              <a href={content.id}>{content.title}</a>
+            </li>
+          ))
+        }
+      </ul>
+    </main>
+  </body>
 </html>
