--- a/src/pages/[blogId].astro
+++ b/src/pages/[blogId].astro
@@ -1,4 +1,5 @@
 ---
+import Layout from "../layouts/Layout.astro";
 import { getBlogs, getBlogDetail } from "../libs/microcms";
 
 export async function getStaticPaths() {
@@ -14,31 +15,13 @@ const { blogId } = Astro.params;
 const blog = await getBlogDetail(blogId as string);
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-
-    <style>
-      main {
-        margin: auto;
-        padding: 1em;
-        max-width: 60ch;
-      }
-    </style>
-
-    <title>Bean2Cup</title>
-  </head>
-  <body>
-    <h1>Bean2Cup</h1>
+<Layout title={blog.title}>
+  <h1>Bean2Cup</h1>
+  <main>
     <main>
-      <main>
-        <h1 class="title">{blog.title}</h1>
-        <p class="publishedAt">公開日時：{blog.publishedAt}</p>
-        <div class="post" set:html={blog.content} />
-      </main>
+      <h1 class="title">{blog.title}</h1>
+      <p class="publishedAt">公開日時：{blog.publishedAt}</p>
+      <div class="post" set:html={blog.content} />
     </main>
-  </body>
-</html>
+  </main>
+</Layout>
