--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,37 +1,20 @@
 ---
+import Layout from "../layouts/Layout.astro";
 import { getBlogs } from "../libs/microcms";
 const response = await getBlogs({ fields: ["id", "title"] });
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-
-    <style>
-      main {
-        margin: auto;
-        padding: 1em;
-        max-width: 60ch;
+<Layout title="TOP">
+  <h1>Bean2Cup</h1>
+  <main>
+    <ul>
+      {
+        response.contents.map((content: any) => (
+          <li>
+            <a href={content.id}>{content.title}</a>
+          </li>
+        ))
       }
-    </style>
-
-    <title>Bean2Cup</title>
-  </head>
-  <body>
-    <h1>Bean2Cup</h1>
-    <main>
-      <ul>
-        {
-          response.contents.map((content: any) => (
-            <li>
-              <a href={content.id}>{content.title}</a>
-            </li>
-          ))
-        }
-      </ul>
-    </main>
-  </body>
-</html>
+    </ul>
+  </main>
+</Layout>
