--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
+import BaseHead from "../components/BaseHead.astro";
+
 const { title } = Astro.props;
 ---
-
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
@@ -11,6 +12,13 @@ const { title } = Astro.props;
     <title>{title} | Bean2Cup</title>
   </head>
   <body>
+    <BaseHead />
     <slot />
   </body>
 </html>
+
+<style>
+  body{
+    margin: unset;
+  }
+</style>
