--- a/src/pages/[blogId].astro
+++ b/src/pages/[blogId].astro
@@ -17,8 +17,68 @@ const blog = await getBlogDetail(blogId as string);
 
 <Layout title={blog.title}>
   <main>
-    <h1 class="title">{blog.title}</h1>
-    <p class="publishedAt">公開日時：{blog.publishedAt}</p>
-    <div class="post" set:html={blog.content} />
+    <article>
+      <div class="hero-image">
+        <img src={blog.eyecatch.url} />
+        <div class="overlay">
+          <h1 class="title">{blog.title}</h1>
+          <p class="publishedAt">公開日時：{new Date(blog.publishedAt).toLocaleDateString()}</p>
+        </div>
+      </div>
+
+      <div class="post" set:html={blog.content} />
+    </article>
+    <div class="back">
+      <a href="/">TOPへ戻る</a>
+    </div>
   </main>
 </Layout>
+
+<style>
+  main {
+    width: 960px;
+    margin-inline: auto;
+    padding: 16px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+  }
+
+  article {
+    display: grid;
+    grid-template-rows: 480px auto;
+    gap: 48px;
+  }
+
+  .hero-image {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  .overlay {
+    position: absolute;
+    left: 16px;
+    bottom: 16px;
+    padding: 16px;
+    color: #fff4e0;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+
+  .hero-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .back {
+    display: grid;
+    place-items: center;
+  }
+
+  .back a {
+    font-size: 20px;
+    font-weight: bold;
+    margin-inline: auto;
+  }
+</style>
