--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,6 +29,7 @@ const response = await getBlogs({ fields: ["id", "title", "eyecatch"] });
   }
 
   .article-list {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
   }
@@ -52,5 +53,21 @@ const response = await getBlogs({ fields: ["id", "title", "eyecatch"] });
     background-color: transparent;
     text-decoration: none;
     color: inherit;
+  }
+
+  @media screen and (max-width: 960px) {
+    main {
+      width: 100%;
+    }
+
+    .article-list-item {
+      width: 50%;
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    .article-list-item {
+      width: 100%;
+    }
   }
 </style>
