--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,12 +3,35 @@ import BaseHead from "../components/BaseHead.astro";
 
 const { title } = Astro.props;
 ---
+
 <html lang="ja">
-  <head>
+  <head prefix="og: https://ogp.me/ns#">
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
+    <!-- Basic OGP Tags -->
+    <meta property="og:title" content="コーヒーの豆知識: コーヒー愛好者のための情報満載ブログ" />
+    <meta
+      property="og:description"
+      content="コーヒーの歴史、種類、栽培方法、抽出のコツ、各国のコーヒー文化など、コーヒーに関する深い知識を提供します。"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bean2cup.pages.dev/" />
+    <meta property="og:image" content="https://bean2cup.pages.dev/ogp.png" />
+
+    <!-- Additional OGP Tags (if needed) -->
+    <meta property="og:site_name" content="コーヒーの豆知識" />
+    <meta property="og:locale" content="ja_JP" />
+
+    <!-- Twitter Card integration (if you plan to share your blog on Twitter) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="コーヒーの豆知識: コーヒー愛好者のための情報満載ブログ" />
+    <meta
+      name="twitter:description"
+      content="コーヒーの歴史、種類、栽培方法、抽出のコツ、各国のコーヒー文化など、コーヒーに関する深い知識を提供します。"
+    />
+    <meta name="twitter:image" content="https://bean2cup.pages.dev/ogp.png" />
     <title>{title} | Bean2Cup</title>
   </head>
   <body>
@@ -18,7 +41,7 @@ const { title } = Astro.props;
 </html>
 
 <style>
-  body{
+  body {
     margin: unset;
   }
 </style>
